# init

./: Cargo.toml  README.md
src/: args.rs  io.rs  main.rs
templates/python/: justfile.tmpl  pyproject.toml.tmpl  zed_settings.json.tmpl
templates/rust/: justfile.tmpl  zed_settings.json.tmpl
