[package]
name = "init"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive" ]}
dialoguer = "0.12.0"
handlebars = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
spinners = "4.2.0"
xshell = "0.2.7"
